// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox defaultChecked 1`] = `
<span
  class="za-checkbox za-checkbox--checked"
>
  <span
    class="za-checkbox__widget"
  >
    <span
      class="za-checkbox__inner"
    />
  </span>
  <span
    class="za-checkbox__text"
  >
    foo
  </span>
  <input
    aria-checked="true"
    checked=""
    class="za-checkbox__input"
    type="checkbox"
    value="on"
  />
</span>
`;

exports[`Checkbox disabled 1`] = `
<span
  class="za-checkbox za-checkbox--disabled"
>
  <span
    class="za-checkbox__widget"
  >
    <span
      class="za-checkbox__inner"
    />
  </span>
  <span
    class="za-checkbox__text"
  >
    foo
  </span>
  <input
    class="za-checkbox__input"
    disabled=""
    type="checkbox"
    value="off"
  />
</span>
`;

exports[`Checkbox renders correctly 1`] = `
<span
  class="za-checkbox za-checkbox--checked"
>
  <span
    class="za-checkbox__widget"
  >
    <span
      class="za-checkbox__inner"
    />
  </span>
  <span
    class="za-checkbox__text"
  >
    foo
  </span>
  <input
    aria-checked="true"
    checked=""
    class="za-checkbox__input"
    type="checkbox"
    value="on"
  />
</span>
`;

exports[`Checkbox.Group render defaultValue correctly 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--xs za-checkbox-group--radius"
>
  <div
    class="za-checkbox-group__inner"
  >
    <span
      class="za-checkbox"
    >
      <span
        class="za-checkbox__widget"
      >
        <span
          class="za-checkbox__inner"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
      <input
        aria-checked="false"
        class="za-checkbox__input"
        type="checkbox"
        value="off"
      />
    </span>
    <span
      class="za-checkbox za-checkbox--checked"
    >
      <span
        class="za-checkbox__widget"
      >
        <span
          class="za-checkbox__inner"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
      <input
        aria-checked="true"
        checked=""
        class="za-checkbox__input"
        type="checkbox"
        value="on"
      />
    </span>
    <span
      class="za-checkbox"
    >
      <span
        class="za-checkbox__widget"
      >
        <span
          class="za-checkbox__inner"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
      <input
        aria-checked="false"
        class="za-checkbox__input"
        type="checkbox"
        value="off"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group render value correctly 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--xs za-checkbox-group--radius"
>
  <div
    class="za-checkbox-group__inner"
  >
    <span
      class="za-checkbox za-checkbox--checked"
    >
      <span
        class="za-checkbox__widget"
      >
        <span
          class="za-checkbox__inner"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
      <input
        aria-checked="true"
        checked=""
        class="za-checkbox__input"
        type="checkbox"
        value="on"
      />
    </span>
    <span
      class="za-checkbox"
    >
      <span
        class="za-checkbox__widget"
      >
        <span
          class="za-checkbox__inner"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
      <input
        aria-checked="false"
        class="za-checkbox__input"
        type="checkbox"
        value="off"
      />
    </span>
    <span
      class="za-checkbox"
    >
      <span
        class="za-checkbox__widget"
      >
        <span
          class="za-checkbox__inner"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
      <input
        aria-checked="false"
        class="za-checkbox__input"
        type="checkbox"
        value="off"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group renders correctly 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--xs za-checkbox-group--radius"
>
  <div
    class="za-checkbox-group__inner"
  >
    <span
      class="za-checkbox"
    >
      <span
        class="za-checkbox__widget"
      >
        <span
          class="za-checkbox__inner"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项一
      </span>
      <input
        aria-checked="false"
        class="za-checkbox__input"
        type="checkbox"
        value="off"
      />
    </span>
    <span
      class="za-checkbox za-checkbox--checked"
    >
      <span
        class="za-checkbox__widget"
      >
        <span
          class="za-checkbox__inner"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项二
      </span>
      <input
        aria-checked="true"
        checked=""
        class="za-checkbox__input"
        type="checkbox"
        value="on"
      />
    </span>
    <span
      class="za-checkbox"
    >
      <span
        class="za-checkbox__widget"
      >
        <span
          class="za-checkbox__inner"
        />
      </span>
      <span
        class="za-checkbox__text"
      >
        选项三
      </span>
      <input
        aria-checked="false"
        class="za-checkbox__input"
        type="checkbox"
        value="off"
      />
    </span>
  </div>
</div>
`;

exports[`Checkbox.Group type is button 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--button za-checkbox-group--xs za-checkbox-group--radius"
>
  <div
    class="za-checkbox-group__inner"
  >
    <button
      class="za-checkbox"
      type="button"
    >
      选项一
      <input
        aria-checked="false"
        class="za-checkbox__input"
        type="checkbox"
        value="off"
      />
    </button>
    <button
      class="za-checkbox"
      type="button"
    >
      选项二
      <input
        aria-checked="false"
        class="za-checkbox__input"
        type="checkbox"
        value="off"
      />
    </button>
    <button
      class="za-checkbox"
      type="button"
    >
      选项三
      <input
        aria-checked="false"
        class="za-checkbox__input"
        type="checkbox"
        value="off"
      />
    </button>
  </div>
</div>
`;

exports[`Checkbox.Group type is list 1`] = `
<div
  class="za-checkbox-group za-checkbox-group--list za-checkbox-group--xs za-checkbox-group--radius"
>
  <div
    class="za-checkbox-group__inner"
  >
    <div
      class="za-list"
    >
      <ul>
        <li
          class="za-list-item za-checkbox za-list-item--link"
        >
          <div
            class="za-list-item__prefix"
          >
            <span
              class="za-checkbox__widget"
            >
              <span
                class="za-checkbox__inner"
              />
            </span>
            <input
              aria-checked="false"
              class="za-checkbox__input"
              type="checkbox"
              value="off"
            />
          </div>
          <div
            class="za-list-item__wrapper"
          >
            <div
              class="za-list-item__inner"
            >
              <div
                class="za-list-item__title"
              >
                <span
                  class="za-checkbox__text"
                >
                  选项一
                </span>
                <input
                  aria-checked="false"
                  class="za-checkbox__input"
                  type="checkbox"
                  value="off"
                />
              </div>
            </div>
          </div>
        </li>
        <li
          class="za-list-item za-checkbox za-list-item--link"
        >
          <div
            class="za-list-item__prefix"
          >
            <span
              class="za-checkbox__widget"
            >
              <span
                class="za-checkbox__inner"
              />
            </span>
            <input
              aria-checked="false"
              class="za-checkbox__input"
              type="checkbox"
              value="off"
            />
          </div>
          <div
            class="za-list-item__wrapper"
          >
            <div
              class="za-list-item__inner"
            >
              <div
                class="za-list-item__title"
              >
                <span
                  class="za-checkbox__text"
                >
                  选项二
                </span>
                <input
                  aria-checked="false"
                  class="za-checkbox__input"
                  type="checkbox"
                  value="off"
                />
              </div>
            </div>
          </div>
        </li>
        <li
          class="za-list-item za-checkbox za-list-item--link"
        >
          <div
            class="za-list-item__prefix"
          >
            <span
              class="za-checkbox__widget"
            >
              <span
                class="za-checkbox__inner"
              />
            </span>
            <input
              aria-checked="false"
              class="za-checkbox__input"
              type="checkbox"
              value="off"
            />
          </div>
          <div
            class="za-list-item__wrapper"
          >
            <div
              class="za-list-item__inner"
            >
              <div
                class="za-list-item__title"
              >
                <span
                  class="za-checkbox__text"
                >
                  选项三
                </span>
                <input
                  aria-checked="false"
                  class="za-checkbox__input"
                  type="checkbox"
                  value="off"
                />
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
